update links; minify html

--- a/index.html
+++ b/index.html
@@ -35,7 +35,12 @@
     </style>
   </head>
   <body>
-    <h1><a href="http://www.fas.org/sgp/crs/natsec/RL33110.pdf">$</a> <a href="https://en.wikipedia.org/wiki/Make_(software)">make</a> <a href="http://www.debian.org/">install</a> <a href="https://www.youtube.com/watch?v=NbuUW9i-mHs">not war</a></h1>
+    <h1>
+      <a href="https://fas.org/sgp/crs/natsec/RL33110.pdf">$</a>
+      <a href="https://en.wikipedia.org/wiki/Make_(software)">make</a>
+      <a href="https://www.debian.org/">install</a>
+      <a href="https://www.youtube.com/watch?v=NbuUW9i-mHs">not war</a>
+    </h1>
     <p>maybe one day this site will have content.</p>
   </body>
 </html>
